--- a/lolkek.html
+++ b/lolkek.html
@@ -47,14 +47,69 @@
   </div>
   <h1>Buttons</h1>
   <p>
-
-
-
-
-
-
-
+<button type="button" class="btn btn-lg btn-default">Початкова</button>
+<button type="button" class="btn btn-lg btn-primary">Основна</button>
+<button type="button" class="btn btn-lg btn-success">Все буде добре</button>
+<button type="button" class="btn btn-lg btn-info">Інфа</button>
+<button type="button" class="btn btn-lg btn-warning">Попередження</button>
+<button type="button" class="btn btn-lg btn-danger">Щось не те!</button>
+<button type="button" class="btn btn-lg btn-link">У вигляді лінка</button>
   </p>
+  <p>
+<button type="button" class="btn btn-default">Початкова</button>
+<button type="button" class="btn btn-primary">Основна</button>
+<button type="button" class="btn btn-success">Все буде добре</button>
+<button type="button" class="btn btn-info">Інфа</button>
+<button type="button" class="btn btn--warning">Попередження</button>
+<button type="button" class="btn btn-danger">Щось не те!</button>
+<button type="button" class="btn btn-link">У вигляді лінка</button>
+  </p>
+  <p>
+<button type="button" class="btn btn-sm btn-default">Початкова</button>
+<button type="button" class="btn btn-sm btn-primary">Основна</button>
+<button type="button" class="btn btn-sm btn-success">Все буде добре</button>
+<button type="button" class="btn btn-sm btn-info">Інфа</button>
+<button type="button" class="btn btn-sm btn-warning">Попередження</button>
+<button type="button" class="btn btn-sm btn-danger">Щось не те!</button>
+<button type="button" class="btn btn-sm btn-link">У вигляді лінка</button>
+  </p>
+  <p>
+    <button type="button" class="btn btn-xs btn-default">Початкова</button>
+    <button type="button" class="btn btn-xs btn-primary">Основна</button>
+    <button type="button" class="btn btn-xs btn-success">Все буде добре</button>
+    <button type="button" class="btn btn-xs btn-info">Інфа</button>
+    <button type="button" class="btn btn-xs btn-warning">Попередження</button>
+    <button type="button" class="btn btn-xs btn-danger">Щось не те!</button>
+    <button type="button" class="btn btn-xs btn-link">У вигляді лінка</button>
+  </p>
+  <h1>Images</h1>
+  <div class="row">
+    <div class="col-md-4">
+      <a href="./images/1.png"></a>
+      <img src="./images/1.png" alt="" style="width:100%" class="img-rounded">
+      <div class="caption">
+        <p>Lorem ipsum...</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <a href="./images/2.png"></a>
+      <img src="./images/2.png" alt="" style="width:100%" class="img-circle">
+      <div class="caption">
+        <p>Lorem ipsum...</p>
+      </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-md-4">
+      <a href="./images/3.png"></a>
+      <img src="./images/3.png" alt="" style="width:100%" class="img-thumbnail">
+      <div class="caption">
+        <p>Lorem ipsum...</p>
+      </div>
+    </div>
+  </div>
 </div>
 </body>
 </html>
